@@ -54,6 +54,7 @@ v30.0.00
         System: fixed uninitialized variable PHP warnings on Parent Dashboard
         Data Updater: fixed attachments being cleared when new data updates are submitted
         Messenger: fixed missing From address on emails when using the Add Recipient action in Send Report
+        Planner: fixed Teacher Notes in smart blocks not visible when using the Show Confidential Data toggle
         Staff: fixed coverage longer than one week not including staff duty and activity cover
         Timetable Admin: fixed missing Manage Exceptions button on the timetable in Course Enrolment by Person
 
